// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block 1`] = `
Object {
  "kind": "Block",
  "statements": Array [
    Object {
      "argument": Object {
        "definitions": Array [
          Object {
            "expression": Object {
              "kind": "StringLiteral",
              "value": "hello",
            },
            "identifier": Object {
              "kind": "ValueIdentifier",
              "value": "msg",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": Object {
        "kind": "ValueIdentifier",
        "value": "log",
      },
      "kind": "FunctionCall",
    },
    Object {
      "expression": Object {
        "kind": "NumberLiteral",
        "value": 4,
      },
      "identifier": Object {
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "ConstantDefinition",
    },
  ],
}
`;

exports[`Block.empty 1`] = `
Object {
  "kind": "Block",
  "statements": Array [],
}
`;

exports[`ConstantDefinition 1`] = `
Object {
  "expression": Object {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "identifier": Object {
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "ConstantDefinition",
}
`;

exports[`ConstantDefinition.functionCall 1`] = `
Object {
  "expression": Object {
    "argument": Object {
      "definitions": Array [
        Object {
          "expression": Object {
            "kind": "ValueIdentifier",
            "value": "point",
          },
          "identifier": Object {
            "kind": "ValueIdentifier",
            "value": "point",
          },
          "kind": "NamedLiteral",
        },
      ],
      "kind": "RecordLiteral",
    },
    "identifier": Object {
      "kind": "ValueIdentifier",
      "value": "foo",
    },
    "kind": "FunctionCall",
  },
  "identifier": Object {
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "ConstantDefinition",
}
`;

exports[`FunctionCall 1`] = `
Object {
  "argument": Object {
    "definitions": Array [
      Object {
        "expression": Object {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "identifier": Object {
          "kind": "ValueIdentifier",
          "value": "msg",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
  "identifier": Object {
    "kind": "ValueIdentifier",
    "value": "log",
  },
  "kind": "FunctionCall",
}
`;

exports[`FunctionDefinition 1`] = `
Object {
  "argument": Object {
    "definitions": Array [
      Object {
        "identifier": Object {
          "kind": "ValueIdentifier",
          "value": "msg",
        },
        "kind": "NamedDefinition",
        "typeTag": Object {
          "identifier": Object {
            "kind": "TypeIdentifier",
            "value": "string",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
  "body": Object {
    "kind": "Block",
    "statements": Array [
      Object {
        "argument": Object {
          "definitions": Array [
            Object {
              "expression": Object {
                "kind": "ValueIdentifier",
                "value": "msg",
              },
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "msg",
              },
              "kind": "NamedLiteral",
            },
          ],
          "kind": "RecordLiteral",
        },
        "identifier": Object {
          "kind": "ValueIdentifier",
          "value": "hello",
        },
        "kind": "FunctionCall",
      },
    ],
  },
  "kind": "FunctionDefinition",
}
`;

exports[`IfStatement 1`] = `
Object {
  "block": Object {
    "kind": "Block",
    "statements": Array [
      Object {
        "expression": Object {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "guard": Object {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;

exports[`NamedTupleDefinition 1`] = `
Object {
  "identifier": Object {
    "kind": "TypeIdentifier",
    "value": "Point",
  },
  "kind": "NamedTupleDefinition",
  "tuple": Object {
    "definitions": Array [
      Object {
        "kind": "TypeIdentifier",
        "value": "number",
      },
      Object {
        "kind": "TypeIdentifier",
        "value": "number",
      },
    ],
    "kind": "TupleDefinition",
  },
}
`;

exports[`Program 1`] = `
Object {
  "kind": "Program",
  "statements": Array [
    Object {
      "kind": "NamedRecordDefinitionStatement",
      "namedRecordDefinition": Object {
        "identifier": Object {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordDefinition",
        "record": Object {
          "definitions": Array [
            Object {
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedDefinition",
              "typeTag": Object {
                "identifier": Object {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
            Object {
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedDefinition",
              "typeTag": Object {
                "identifier": Object {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
          ],
          "kind": "RecordDefinition",
        },
      },
    },
    Object {
      "expression": Object {
        "kind": "NumberLiteral",
        "value": 1,
      },
      "identifier": Object {
        "kind": "ValueIdentifier",
        "value": "one",
      },
      "kind": "ConstantDefinition",
    },
    Object {
      "expression": Object {
        "identifier": Object {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordLiteral",
        "recordLiteral": Object {
          "definitions": Array [
            Object {
              "expression": Object {
                "kind": "ValueIdentifier",
                "value": "one",
              },
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedLiteral",
            },
            Object {
              "expression": Object {
                "kind": "NumberLiteral",
                "value": 2,
              },
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedLiteral",
            },
          ],
          "kind": "RecordLiteral",
        },
      },
      "identifier": Object {
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "ConstantDefinition",
    },
    Object {
      "expression": Object {
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "DEBUG_Log",
    },
  ],
}
`;

exports[`Program.2 1`] = `
Object {
  "kind": "Program",
  "statements": Array [
    Object {
      "kind": "NamedRecordDefinitionStatement",
      "namedRecordDefinition": Object {
        "identifier": Object {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordDefinition",
        "record": Object {
          "definitions": Array [
            Object {
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedDefinition",
              "typeTag": Object {
                "identifier": Object {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
            Object {
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedDefinition",
              "typeTag": Object {
                "identifier": Object {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
          ],
          "kind": "RecordDefinition",
        },
      },
    },
    Object {
      "expression": Object {
        "argument": Object {
          "definitions": Array [
            Object {
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "point",
              },
              "kind": "NamedDefinition",
              "typeTag": Object {
                "identifier": Object {
                  "kind": "TypeIdentifier",
                  "value": "Point",
                },
                "kind": "TypeTag",
              },
            },
          ],
          "kind": "RecordDefinition",
        },
        "body": Object {
          "kind": "Block",
          "statements": Array [
            Object {
              "expression": Object {
                "kind": "ValueIdentifier",
                "value": "point",
              },
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "ConstantDefinition",
            },
            Object {
              "expression": Object {
                "identifier": Object {
                  "kind": "TypeIdentifier",
                  "value": "Point",
                },
                "kind": "NamedRecordLiteral",
                "recordLiteral": Object {
                  "definitions": Array [
                    Object {
                      "expression": Object {
                        "kind": "ValueIdentifier",
                        "value": "x",
                      },
                      "identifier": Object {
                        "kind": "ValueIdentifier",
                        "value": "x",
                      },
                      "kind": "NamedLiteral",
                    },
                    Object {
                      "expression": Object {
                        "kind": "ValueIdentifier",
                        "value": "y",
                      },
                      "identifier": Object {
                        "kind": "ValueIdentifier",
                        "value": "y",
                      },
                      "kind": "NamedLiteral",
                    },
                  ],
                  "kind": "RecordLiteral",
                },
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "kind": "FunctionDefinition",
      },
      "identifier": Object {
        "kind": "ValueIdentifier",
        "value": "increment",
      },
      "kind": "ConstantDefinition",
    },
    Object {
      "expression": Object {
        "identifier": Object {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordLiteral",
        "recordLiteral": Object {
          "definitions": Array [
            Object {
              "expression": Object {
                "kind": "ValueIdentifier",
                "value": "one",
              },
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedLiteral",
            },
            Object {
              "expression": Object {
                "kind": "NumberLiteral",
                "value": 2,
              },
              "identifier": Object {
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedLiteral",
            },
          ],
          "kind": "RecordLiteral",
        },
      },
      "identifier": Object {
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "ConstantDefinition",
    },
    Object {
      "argument": Object {
        "definitions": Array [
          Object {
            "expression": Object {
              "kind": "ValueIdentifier",
              "value": "point",
            },
            "identifier": Object {
              "kind": "ValueIdentifier",
              "value": "point",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": Object {
        "kind": "ValueIdentifier",
        "value": "increment",
      },
      "kind": "FunctionCall",
    },
    Object {
      "expression": Object {
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "DEBUG_Log",
    },
  ],
}
`;

exports[`ReturnStatement 1`] = `
Object {
  "expression": Object {
    "kind": "StringLiteral",
    "value": "string",
  },
  "kind": "ReturnStatement",
}
`;

exports[`TupleDefinition 1`] = `
Object {
  "definitions": Array [
    Object {
      "kind": "TypeIdentifier",
      "value": "number",
    },
    Object {
      "kind": "TypeIdentifier",
      "value": "number",
    },
  ],
  "kind": "TupleDefinition",
}
`;

exports[`string 1`] = `
Object {
  "kind": "StringLiteral",
  "value": "hello world",
}
`;

exports[`string 2`] = `
Object {
  "kind": "StringLiteral",
  "value": "hello
 world",
}
`;
